--- a/style.css
+++ b/style.css
@@ -26,6 +26,14 @@ html,body{
     height: 100%;
     width: 100%;
 }
+#crsr{
+    height: 2.3vw;
+    width: 2.3vw;
+    border-radius: 50%;
+    border: 1px solid rgba(255, 255, 255, 0.58);
+    z-index: 9;
+    position: fixed;
+}
 #loader{
     height: 100%;
     width: 100%;
@@ -110,4 +118,51 @@ html,body{
     width: 100%;
     height: 100vh;
     background-color: #151515;
+}
+#page1 #nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 2.3vw 4.5vw;
+}
+#nav #nav-part2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 3vw;
+}
+#nav-part2 h4{
+    font-size: 0.8vw;
+    font-weight: 500;
+}
+.hero{
+    /* background-color: red; */
+    width: 75%;
+    margin-left: 25%;
+    height: fit-content;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    position: relative;
+    z-index: 99;
+}
+.hero h1{
+    font-size: 7.2vw;
+    line-height: 7.2vw;
+    text-transform: uppercase;
+    font-weight: 500;
+}
+.hero:nth-child(2){
+    margin-top: 20vh;
+}
+.hero h2{
+    font-size: 7.2vw;
+    line-height: 7.2vw;
+    text-transform: uppercase;
+    font-weight: 500;
+}
+.hero h2:hover{
+    -webkit-text-stroke: 2px white;
+    color: transparent;
+    font-weight: 100;
 }
